--- a/server/http/index.html
+++ b/server/http/index.html
@@ -559,12 +559,9 @@
                         <br />
                         <label data-translation-enablemusic>Enable Music</label>
                         <input type="checkbox" data-localhost="enable_music" />
-                        <br />/*
-                        <label data-translation-enabledirectx>Enable DirectX</label>
-                        <input type="checkbox" data-localhost="use_d3d" />
-                        <br />*/
-                        <label data-translation-antialiasing>Anti Aliasing</label>
-                        <input type="range" min=0 max=32 data-localhost="antialias" />
+                        <br />
+                        <label data-translation-alternative-pictures>Alternative Pictures</label>
+                        <input type="range" min=0 max=32 data-localhost="altpics" />
                         <br />
                         <label data-translation-fontsize>Font Size</label>
                         <input type="range" min="8" max="18" value="14" id="fontsize">
