--- a/server/http/index.html
+++ b/server/http/index.html
@@ -561,7 +561,7 @@
                         <input type="checkbox" data-localhost="enable_music" />
                         <br />
                         <label data-translation-alternative-pictures>Alternative Pictures</label>
-                        <input type="range" min=0 max=32 data-localhost="altpics" />
+                        <input type="checkbox" data-localhost="altpics" />
                         <br />
                         <label data-translation-fontsize>Font Size</label>
                         <input type="range" min="8" max="18" value="14" id="fontsize">
