--- a/server/http/index.html
+++ b/server/http/index.html
@@ -258,7 +258,7 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
-        <div style="text-align: center; margin-top: 25vh; displat:block">
+        <div style="text-align: center; margin-top: 25vh; display:block">
             We are currently developing an online deck editor which will be available in the near future.
             <br /> If after updating your launcher a new window does not open, please consult our Bug Reports Forum for help.
         </div>
