fix screen flicker

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -712,13 +712,16 @@
         ga('send', 'pageview');
     </script>
 
-    <script>
-    </script>
+
+
     <script src="js/http-gamelist.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/ConfigParser.js"></script>
     <script src="js/parseYDK.js"></script>
     <script src="js/deck-edit-launcher.js"></script>
+    <script src="js/buffer.js"></script>
+    <script src="js/card.js"></script>
+    <script src="js/ygopro-ws.js"></script>
     </script>
 
 </body>
