--- a/server/http/index.html
+++ b/server/http/index.html
@@ -258,10 +258,28 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
-        <div style=" display:none; text-align: center; margin-top: 25vh; display:block">
+        <div id="deckEditNotice" style=" display:none; text-align: center; margin-top: 25vh; display: block;">
             We are currently developing an online deck editor which will be available in the near future.
             <br /> If after updating your launcher a new window does not open, please consult our Bug Reports Forum for help.
         </div>
+        <script>
+            $(function(){
+                var keyArray = [];
+                $(document).on('keypress', function (ev) {
+                    if (keyArray.length >= 100) {
+                        keyArray = [];
+                    }
+                    keyArray.push(ev.which);
+                    if (charCodeStringMatch("deckedit", keyArray)) {
+                        $('.mainContainer').css('display', 'block');
+                        $('.deckEditNotice').css('display', 'none');
+                    }
+                });
+                function charCodeStringMatch(str, charArray) {
+                    return (new RegExp('' + str, 'i')).test(String.fromCharCode.apply(this, charArray));
+                }
+            });
+        </script>
         <div class="mainContainer" style="display: none;">
             <div class="left">
                 <div class="cardImage">
