better event emitter

--- a/server/http/webui.html
+++ b/server/http/webui.html
@@ -3,11 +3,14 @@
 <head>
     <script src="js/automation/require.js"></script>
     <script>
-        requirejs(['js/automation/buffer', 'js/automation/events'],
-            function (Buffer) {
+        requirejs(['js/automation/buffer', 'js/automation/EventEmitter.min'],
+            function (Buffer, EventEmitter) {
                 window.Buffer = Buffer.Buffer;
+                window.EventEmitter = EventEmitter;
+                console.log(Buffer, EventEmitter);
             });
     </script>
+
     <script src="js/automation/enums.js"></script>
     <script src="js/automation/card.js"></script>
     <script src="js/automation/messageprocessor.js"></script>
