--- a/server/http/webui.html
+++ b/server/http/webui.html
@@ -13,7 +13,7 @@
 
     <script src="js/automation/enums.js"></script>
     <script src="js/automation/card.js"></script>
-    <script src="js/automation/messageprocessor.js"></script>
+    <script src="js/automation/reciever.js"></script>
     <script src="js/automation/ygopro-ws.js"></script>
 
 </head>
