--- a/server/http/webui.html
+++ b/server/http/webui.html
@@ -14,6 +14,7 @@
     <script src="js/automation/enums.js"></script>
     <script src="js/automation/card.js"></script>
     <script src="js/automation/reciever.js"></script>
+    <script src="js/automation/reply.js"></script>
     <script src="js/automation/ygopro-ws.js"></script>
 
 </head>
